--- a/Projetoaula/nbproject/private/private.properties
+++ b/Projetoaula/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=/home/alunos/a2341883/snap/netbeans/93/tomcat101.properties
+deploy.ant.properties.file=/home/alunos/a2341883/.netbeans/17/tomcat101.properties
 j2ee.server.home=/usr/local/tomcat/apache-tomcat-10.1.20
 j2ee.server.instance=tomcat101:home=/usr/local/tomcat/apache-tomcat-10.1.20
 selected.browser=SL[/Browsers/FirefoxBrowser
